<resources>
    <string name="app_name">Shelter</string>
    <string name="header">Find your Shelter to share your problem and get solution</string>
    <string name="register_title">Create Account</string>
    <string name="login_title">Welcome Back</string>
    <string name="title_home">Home</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logout">Logout</string>

    <string name="type_message">Type Message</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <string-array name="question_EXT">
        <item>I am the life of the party.</item>
        <item>I don\'t talk a lot.</item>
        <item>I feel comfortable around people.</item>
        <item>I keep in the background.</item>
        <item>I start conversations.</item>
        <item>I have little to say.</item>
        <item>I talk to a lot of different people at parties.</item>
        <item>I don\'t like to draw attention to myself.</item>
        <item>I don\'t mind being the center of attention.</item>
        <item>I am quiet around strangers.</item>
        <item>I get stressed out easily.</item>
        <item>I am relaxed most of the time.</item>
        <item>I worry about things.</item>
        <item>I seldom feel blue.</item>
        <item>I am easily disturbed.</item>
        <item>I get upset easily.</item>
        <item>I change my mood a lot.</item>
        <item>I have frequent mood swings.</item>
        <item>I get irritated easily.</item>
        <item>I often feel blue.</item>
        <item>I feel little concern for others.</item>
        <item>I am interested in people.</item>
        <item>I insult people.</item>
        <item>I sympathize with others\' feelings.</item>
        <item>I am not interested in other people\'s problems.</item>
        <item>I have a soft heart.</item>
        <item>I am not really interested in others.</item>
        <item>I take time out for others.</item>
        <item>I feel others\' emotions.</item>
        <item>I make people feel at ease.</item>
        <item>I am always prepared.</item>
        <item>I leave my belongings around.</item>
        <item>I pay attention to details.</item>
        <item>I make a mess of things.</item>
        <item>I get chores done right away.</item>
        <item>I often forget to put things back in their proper place.</item>
        <item>I like order.</item>
        <item>I shirk my duties.</item>
        <item>I follow a schedule.</item>
        <item>I am exacting in my work.</item>
        <item>I have a rich vocabulary.</item>
        <item>I have difficulty understanding abstract ideas.</item>
        <item>I have a vivid imagination.</item>
        <item>I am not interested in abstract ideas.</item>
        <item>I have excellent ideas.</item>
        <item>I do not have a good imagination.</item>
        <item>I am quick to understand things.</item>
        <item>I use difficult words.</item>
        <item>I spend time reflecting on things.</item>
        <item>I am full of ideas.</item>
    </string-array>


</resources>